pwt-macros/tests/widget/no_clone.stderr
error[E0277]: the trait bound `Foo: Clone` is not satisfied
  --> tests/widget/no_clone.rs:47:1
   |
47 | #[widget(pwt=crate, comp=FooComp, @input, @element)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `Foo`
   |
   = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Foo` with `#[derive(Clone)]`
   |
47 + #[derive(Clone)]
48 | #[widget(pwt=crate, comp=FooComp, @input, @element)]
   |
